--- a/大二下/概率论与数理统计/概率论与数理统计/概率论.md
+++ b/大二下/概率论与数理统计/概率论与数理统计/概率论.md
@@ -1,12 +1,12 @@
 # 概率论
 
 - 常见分布
-  - [常见一维离散分布](#3-2-常见的一维离散型分布)
+  - [常见一维离散分布](#常见的一维离散型分布)
   - 连续型
-    - [均匀分布](#均匀分布uniform-distribution)
-    - [指数分布](#4-4-指数分布)
-    - [正态分布](#4-5-正态分布)
-  - [分布及其期望](#常见分布的期望和方差)
+    - [均匀分布](#均匀分布与几何概型)
+    - [指数分布](#指数分布)
+    - [正态分布](#正态分布)
+  - [分布及其期望](#4.2.3常见分布的期望和方差)
 
 ## 前言
 
@@ -32,7 +32,7 @@
 1934年前苏联科学家辛钦(Khinchin,1894-1959)提出了“平稳过程”
 柯尔莫哥洛夫(Kolmogorov,1903-1987) 前苏联 《概率论基础》（1933） “概率论的公理化方法
 
-## 一、古典概率
+## 1随机事件及其概率
 
 1. 掌握样本空间、随机事件的基本概念和事件的运算关系，学会用概率语言描述实际问题；
 2. 理解概率的统计定义和公理化定义；
@@ -40,7 +40,7 @@
 4. 理解并掌握古典概率的定义和计算；
 5. 理解并掌握条件概率的定义和乘法公式的应用。
 
-### 1-1 随机试验与事件
+### 1.1随机试验与事件
 
 #### 随机现象
 
@@ -121,7 +121,7 @@ $$
 \overline{\bigcup_k A_k}=\bigcap_k \overline{A_k},\overline{\bigcap_k A_k}=\bigcup_k \overline{A_k},
 $$
 
-### 1-2 频率与概率
+### 1.2随机事件的概率
 
 #### 事件的频率
 
@@ -163,7 +163,7 @@ $$
 P:A\to P(A),\forall A\subset \Omega ,\lim_{n\to \infty}f_n(A)=P(A)
 $$
 
-### 1-3 概率的性质
+#### 概率的性质
 
 1. （**空集的概率为零**）$P(\emptyset)=0$.
 2. （**有限可加性**）若$A_1,A_2,\cdots,A_n$为n个两两互不相容的事件，则$P(A_1\cup A_2\cup \cdots\cup A_n)=P(A_1)+P(A_2)+\cdots +P(A_n)$
@@ -176,7 +176,7 @@ $$
 
 性质3 的使用示例：$P(AB)\leq P(A)=0\ \Longrightarrow P(AB)=0$
 
-### 1-4 古典概型
+### 1.3古典概型
 
 古典概率模型(classical probability model),简称古典概型，又称等可能概率模型
 
@@ -220,7 +220,9 @@ $$
 - 小概率事件几乎不可能发生
 - 生日问题
 
-### 1-5 条件概率与乘法公式
+### 1.4条件概率、乘法公式、全概率公式与贝叶斯公式
+
+### 1.4.1条件概率
 
 设A、B为两个事件，且**P(A)>0**，称
 $$
@@ -235,16 +237,23 @@ $$
 - **可列可加性**：
 - **加法公式**
 - **互补性**
-- **乘法公式**  $P(AB)=P(B|A)P(A)=P(A|B)P(B)$
 
-抓阄原理：注意前面一个人抓阄之后不能告诉后面的人,那么每个人抓到特定对对象阄的概率相等
+> 抓阄原理：注意前面一个人抓阄之后不能告诉后面的人,那么每个人抓到特定对对象阄的概率相等
 
-## 二、全概率公式和贝叶斯公式
+#### 1.4.2乘法公式
+
+$$
+P(AB)=P(B|A)P(A)=P(A|B)P(B)
+$$
+
+
+
+#### 1.4.3全概率公式和贝叶斯公式
 
 1. 掌握并会利用全概率公式和贝叶斯公式求解相关问题；
 2. 理解2个事件和多个事件相互独立的定义，并会利用独立性。
 
-### 2-1 全概率公式
+### 全概率公式
 
 **定义1.6** 设随机试验E的样本空间为S,$B_1,B_2,\cdots,B_n$,($P(B_i)>0,i=1,2,\cdots ,n$)是样本空间S的一组事件，若满足：
 
@@ -259,7 +268,7 @@ $$
 P(A)=\sum_{i=1}^n P(B_i)P(A|B_i)
 $$
 
-### 2-2 贝叶斯公式(Bayes)
+### 贝叶斯公式(Bayes)
 
 设随机试验E的样本空间为$\Omega$，A为E的事件，$B_1,B_2,\cdots,B_n$是$\Omega$的一个划分，且$P(B_i)>0(i=1,2,\dots,n),P(A)>0$,则
 $$
@@ -269,7 +278,7 @@ P(B_i|A)
 $$
 上式为贝叶斯公式,由全概率公式可知分母为$P(A)$，由条件概率公式可知分子为$P(AB_i)$
 
-### 2-3 独立性
+### 1.5事件的独立性与贝努里实验
 
 定义1：当P(B)>0时，若事件B的发生对事件A发生的概率没有影响，即`P(A|B)=P(A)`，则称**事件A对事件B独立**.
 
@@ -308,6 +317,26 @@ $$
 P(\bigcup_{i=1}^n A_i)=1-P(\bigcap_{i=1}^n\overline{A_i})
 $$
 
+<details>
+<summary>说明</summary>
+这一部分以前笔记参照的版本使用的编排结构与现在的不同，我想更新，但是工作量太大没法搞所以就先这样了。附新教材目录<br>
+<code>
+## 2随机变量及其分布
+### 2.1随机变量
+### 2.2离散型随机变量的概率分布
+### 2.3随机变量的分布函数
+### 2.4连续型随机变量及其分布
+### 2.5一维随机变量函数的分布
+## 3多维随机变量及其分布
+### 3.1二维随机变量及其分布函数
+### 3.2边缘分布
+### 3.3二维随机变量的条件分布
+### 3.4随机变量的独立性
+### 3.5二维随机变量函数的分布
+### 3-1 一维离散型随机变量及其分布
+</code>
+</details>
+
 ## 三、离散型随机变量
 
 1. 掌握随机变量的定义；
@@ -317,7 +346,8 @@ $$
 5. 能求解离散型随机变量常见函数的分布律；
 6. 掌握贝努利概型。
 
-### 3-1 一维离散型随机变量及其分布
+
+### 一维离散型随机变量及其分布
 
 **定义**：设随机变量E的样本空间是$\Omega$，若对每个$\omega\in \Omega$，有定义在$\Omega$上的一个实数$X(\omega)$与之对应，称这样一个定义在$\Omega$上的单值实函数$X=X(\omega)$为**随机变量**，简记为$r,v,X$.随机变量一般用大写英文字母$X,Y,Z$等或希腊字母$\xi,\eta,\zeta$等表示.*随机变量定义域为$\Omega$值域为R。*
 
@@ -335,7 +365,7 @@ $$
 2. 列表法：概率分布表
 3. 图示法：概率分布图
 
-### 3-2 常见的一维离散型分布
+### 常见的一维离散型分布
 
 只有两个可能结果的试验称为**贝努利试验**（成功失败试验、二次试验）
 
@@ -361,7 +391,7 @@ $$
   - 在贝努利试验中，事件A在每次试验中发生的概率均为p（0<p<1)，以X表示A**首次**发生时**需要的试验次数**
 - **泊松分布**（Poisson Distribution)
   - $X\sim P(\lambda)$
-  - $P\{X=k\}=\frac{\lambda^k}{k!}e^{-\lambda},k=0,1,2,\dots$
+  - $z'z'zP\{X=k\}=\frac{\lambda^k}{k!}e^{-\lambda},k=0,1,2,\dots$
   - 若r.v.X的所有取值为一切非负整数，且其分布律为上式，其中$\lambda>0$为常数，泊松分布在排队论和随机系统中非常有用
   - 泊松分布的最可能发生次数$m=\begin{cases} \lambda和(\lambda-1) & \lambda整数\\ [\lambda] 取整&\lambda不是整数\end{cases}$
 
@@ -372,14 +402,14 @@ $$
 \lim_{n\to\infty}C_n^kp_n^k(1-p_n)^{n-k}=\frac{\lambda^k}{k!}e^{-\lambda},k=0,1,2,\dots
 $$
 
-### 3-3 二维离散型随机变量及其分布
+### 二维离散型随机变量及其分布
 
 二维离散型随机变量也有非负性、规范性
 
 - 联合分布律
 - 边缘分布律（也有非负性，规范性）
 
-### 3-4 条件分布律与独立性
+### 条件分布律与独立性
 
 **定义**：若对固定的$j,p._{j}>0$，称下式为在$Y=y_j$的条件下，X的**条件分布律**，记为$p_{i|j}$.
 $$
@@ -387,7 +417,7 @@ P\{X=x_i|Y=y_j\}=\frac{P\{X=x_i,Y=y_j\}}{P\{Y=y_j\}}=\frac{p_{ij}}{p._{j}},i=1,2
 $$
 同理也有在$X=x_i$的条件下，Y的**条件分布律**
 
-### 3-5 离散型随机变量函数的分布
+### 离散型随机变量函数的分布
 
 **定理**：设X为一个随机变量，若$y=g(x)$是一元单值函数，则$Y=g(X)$也是一个随机变量。
 $$
@@ -399,7 +429,7 @@ $$
 
 **定理**推广：设$(X,Y)$为一个二维随机变量，若$z=g(x,y)$是二元单值实函数，则$Z=g(X,Y)$也是一个随机变量。
 
-## 四、一维连续型随机变量
+## 四、一维连续型随机变量(2)
 
 1. 理解并掌握分布函数的概念；
 2. 能熟练求解离散型随机变量的分布函数；
@@ -482,7 +512,7 @@ $$
 | 5   | $P\{X=a\}\geq 0,\forall a\in\mathbb{R}$  | $P\{X=a\}=0,\forall a\in \mathbb{R}$   |
 | 6   | $P\{X=a\}=0\Leftrightarrow不可能事件$    | $P\{X=a\}=0\nLeftrightarrow不可能事件$ |
 
-### 4-3 均匀分布与几何概型
+### 均匀分布与几何概型
 
 #### 均匀分布（Uniform Distribution)
 
@@ -508,7 +538,7 @@ P(A)=\frac{\text{A的度量}}{\Omega\text{的度量}}
 $$
 一维均匀分布就是一维几何概型.
 
-### 4-4 指数分布
+### 指数分布
 
 指数分布（Exponential Distribution）
 
@@ -532,7 +562,7 @@ F(x)=\begin{cases}
 \end{cases}
 $$
 
-### 4-5 正态分布
+### 正态分布
 
 设随机变量X的概率密度为$f(x)=\frac{1}{\sqrt{2\pi}\sigma}e^{-\frac{(x-\mu)^2}{2\sigma^2}},-\infty<x<+\infty$,其中$\mu,\sigma(\sigma>0)$为常数，则称X服从参数为$\mu,\sigma$的正态分布，记作$X\sim N(\mu,\sigma^2)$
 
@@ -556,7 +586,7 @@ $$
 
 > 计算标准正态分布时，可以使用查表，利用计算机等方法来实现Excel函数为`NORMDIST` [标准正态分布分布函数值excel表示例](附.assets\正态分布.xlsx)
 
-## 五、二维连续型随机变量
+## 五、二维连续型随机变量(3)
 
 1. 掌握二维连续型随机变量的概念和联合概率密度函数的性质；
 2. 掌握边缘分布和边缘概率密度函数的求解；
@@ -741,7 +771,7 @@ $$
 aX+bY\sim N(a\mu_1+b\mu_2,a^2\sigma_1^2+b^2\sigma_2^2+2ab\rho\sigma_1\sigma_2)
 $$
 
-## 六、连续型随机变量函数的分布
+## 六、连续型随机变量函数的分布(3)
 
 ### 6-1 连续型随机变量函数的分布
 
@@ -840,18 +870,11 @@ $$
 1. **串联**系统的寿命Z为Z=min{X,Y}
 2. **并联**系统的寿命Z为Z=max{X,Y}
 
-## 七、数字特征
+## 4随机变量的数字特征
 
-常见的数字特征有：
+### 4.1数学期望
 
-- 数学期望
-- 方差
-- 协方差
-- 相关系数
-
-### 数学期望
-
-#### 离散型随机变量的数学期望
+#### 4.1.1离散型随机变量的数学期望
 
 **定义**：离散型随机变量X，其分布律为：
 $$
@@ -862,11 +885,11 @@ $$
 - 若级数$\sum\limits_{k=1}^\infty|x_k|p_k$发散，则X的数学期望不存在
 - 随机变量X的数学期望是其一切取值的平均值
 
-#### 连续型随机变量的数学期望
+#### 4.1.2连续型随机变量的数学期望
 
 **定义** 设连续型$r.v.X$的概率密度函数为$f(x)$,若积分$\sum\limits_{-\infty}^{+\infty}xf(x)\mathrm{d}x$绝对收敛，则称$\int\limits_{-\infty}^{+\infty}xf(x)\mathrm{d}x$的值为连续型$r.v.X$的**数学期望**，记为$E(X)$.即$E(X)=\int\limits_{-\infty}^{+\infty}xf(x)\mathrm{d}x$.若积分$\int_{-\infty}^{+\infty}|x|f(x)\mathrm{d}x$发散，X的数学期望不存在.
 
-##### 随机变量函数的数学期望（当所有期望都存在的情况下）
+#### 4.1.3随机变量函数的数学期望（当所有期望都存在的情况下）
 
 $$
 E(Y)=E[g(X)]=\sum_{k=1}^\infty g(x_k)\cdotp_k
@@ -884,7 +907,7 @@ $$
 E(Z)=E[g(X,Y)]=\int_{-\infty}^{+\infty}\int_{-\infty}^{+\infty}g(x,y)\cdot f(x,y)\mathrm{d}x\mathrm{d}y
 $$
 
-#### 数学期望的性质（所有期望都存在）
+#### 4.1.4数学期望的性质（所有期望都存在）
 
 1. $E(c)=c$，c是常数
 2. $E(cX)=cE(X)$,c是常数
@@ -895,7 +918,7 @@ $$
 5. 若X与Y独立，则$E(XY)=E(X)E(Y)$.
    1. 若$X_1,X_2,\dots,X_n$相互独立，则$E(X_1X_2\cdots X_n)=E(X_1)E(X_2)\cdots E(X_n)$
 
-### 方差
+### 4.2方差
 
 **定义**：$D(X)=E{[X-E(X)]^2}$
 
@@ -906,7 +929,7 @@ $$
 - $D(cX)=c^2D(X)$,c为常数
 - 若X，Y独立，则$D(X\pm Y)=D(X)+D(Y)$
 
-### 常见分布的期望和方差
+### 4.2.3常见分布的期望和方差
 
 | （离散）分布名称     | 分布                                                   | 期望        | 方差              |
 | -------------------- | ------------------------------------------------------ | ----------- | ----------------- |
@@ -921,7 +944,9 @@ $$
 | 指数分布$E(\lambda)$      | $\begin{cases}\lambda e^{-\lambda x},&x>0\\0,&x\leq 0\end{cases}$          | $\frac{1}{\lambda}$ | $\frac 1{\lambda^2}$ |
 | 正态分布$N(\mu,\sigma^2)$ | $f(x)=\frac 1{\sqrt{2\pi}\sigma}e^{-\frac{(x-\mu)^2}{2\sigma^2}}$          | $\mu$               | $\sigma$             |
 
-### 协方差
+### 4.3协方差与相关系数
+
+#### 协方差的定义
 
 **定义1**：对于二维随机变量（X,Y），如果$E\{[X-E(X)][Y-E(Y)\}$存在，则称它为X与Y的协方差(covariance)，记为$Cov(X,Y)$,即：$Cov(X,Y)=E\{[X-E(X)][Y-E(Y)\}$
 
@@ -938,14 +963,16 @@ $$
 2. 当任意的随机变量，X和Y
    - $Cov(X,Y)=Cov(Y,X)$
    - $Cov(X,X)=D(X)$
-   - $D(X\pm Y)=D(X)+D(Y)\pm Cov(X,Y)$
+   - $D(X\pm Y)=D(X)+D(Y)\pm 2Cov(X,Y)$
 3. $Cov(aX,bY)=abCov(X,Y)$
 4. $Cov(X_1+X_2,Y)=Cov(X_1,Y)+Cov(X_2,Y)$
 
-### 相关系数
+#### 相关系数
 
-**定义**：对于二维随机变量(X,Y),称$\rho _{XY}=\frac{Cov(X,Y)}{\sqrt{D(X)\cdot\sqrt{D(Y)}}}$为X与Y的*相关系数*
-
+**定义**：对于二维随机变量(X,Y),称下式为X与Y的*相关系数*
+$$
+\rho _{XY}=\frac{Cov(X,Y)}{\sqrt{D(X)}\cdot\sqrt{D(Y)}}
+$$
 说明：
 
 - 相关系数与指标变量的度量单位无关（是一个无量纲的量）
@@ -963,9 +990,7 @@ $$
 
 **注**：“独立”与“不相关”：独立是就一般关系而言，不相关是就线性关系而言。独立一定不相关，但是不相关不一定独立
 
-## 八、多维特征与极限定理
-
-### 8.1 多维随机变量的数字特征
+### 4.4多维随机变量的数字特征
 
 #### 一维随机变量的矩
 
@@ -999,27 +1024,29 @@ $E\{[X-E(X)]^4\}$为峰度指标，描述$r.v.X$概率密度峰值大小
 
 1. 数学期望(均值向量)
 
-    $$
-    E(X)=E\left(\begin{matrix}X_1\\X_2\\\cdots\\X_n\end{matrix}\right)=\left(\begin{matrix}E(X_1)\\E(X_2)\\\cdots\\E(X_n)\end{matrix}\right)
-    $$
+   $$
+   E(X)=E\left(\begin{matrix}X_1\\X_2\\\cdots\\X_n\end{matrix}\right)=\left(\begin{matrix}E(X_1)\\E(X_2)\\\cdots\\E(X_n)\end{matrix}\right)
+   $$
 
 2. 方差（协方差矩阵）
 
-    $$
-    \begin{aligned}
-    D(X)&=E\{[X-E(X)][X-E(X)]^T\}\\
-    &=(E\{[X_i-E(X_i)][X_i-E(X_j)]\})_{n\times n}\\
-    &=(Cov(X_i,X_j))_{n\times n}\\
-    &\overset{\Delta}{=}\Sigma
-    \end{aligned}
-    $$
+   $$
+   \begin{aligned}
+   D(X)&=E\{[X-E(X)][X-E(X)]^T\}\\
+   &=(E\{[X_i-E(X_i)][X_i-E(X_j)]\})_{n\times n}\\
+   &=(Cov(X_i,X_j))_{n\times n}\\
+   &\overset{\Delta}{=}\Sigma
+   \end{aligned}
+   $$
 
 ##### 协方差矩阵的性质
 
 1. $\Sigma=\Sigma^T$
 2. $\Sigma$是非负定矩阵，即对任意n维实向量$\alpha =(\alpha,\cdots,\alpha_n)^T$，有$\alpha^T\Sigma\alpha\geq 0$.
 
-### 8.2 大数定律
+## 5多维特征与极限定理
+
+### 5.1大数定律
 
 凡是用来阐明大量独立重复试验的平均结果具有稳定性的一系列定理，统称为**大数定律**。
 
@@ -1044,31 +1071,43 @@ $$
 
 #### 三个具体的大数定律
 
-![知乎上的一个终结](https://pic1.zhimg.com/80/v2-610ab422fe593a5058d951343aa74f68_720w.jpg)
+大数定律的概念：判断**随机变量序列的算术平均值是否向常数**收敛的定律
 
-##### 定理一：契比雪夫大数定理(样本算术均值和真实期望的关系)
+根据成立的条件不同而产生不同的大数定律。
 
-设随机变量$X_1,X_2,\dots,X_n,\cdots$相互独立，且具有相同的数学期望和方差:$E(X_k)=\mu$，$D(X_k)=\sigma^2$,$k=1,2,\cdots$,作前n个随机变量的算术平均$\bar{X}=\frac1{n}\sum\limits_{k=1}^{n}X_k$,则对于任意正数$\varepsilon$有
+| 大数定理 | 条件                         | 关系                           |
+| -------- | ---------------------------- | ------------------------------ |
+| 切比雪夫 | 相互独立、相同期望、相同方差 | 样本算术平均值和真实期望的关系 |
+| 辛钦     | 独立同分布、相同期望         | 样本算术平均值和数学期望的关系 |
+| 贝努利   |                              | 概率与频率的关系               |
+
+#### 定理一：切比雪夫大数定理
+
+设随机变量$X_1,X_2,\dots,X_n,\cdots$**相互独立**，且具有**相同期望**和**相同方差**:$E(X_k)=\mu$，$D(X_k)=\sigma^2$,$k=1,2,\cdots$,作前n个随机变量的算术平均$\bar{X}=\frac1{n}\sum\limits_{k=1}^{n}X_k$,则有
 
 $$
+\forall \varepsilon >0,
 \lim_{n\to \infty}P\{|\bar{X}-\mu|<\varepsilon\}=\lim_{n\to\infty}P\left\{\left|\frac1n\sum_{k=1}^kX_k-\mu\right|<\varepsilon\right\}=1
 $$
 
-**说明**：当n很大时，随机变量$X_1,X_2,\dots,X_n$的算术平均$\frac1n\sum\limits_{k=1}^nX_k$接近于数学期望
+也就是序列 $\bar{X}=\frac{1}{n} \sum\limits_{k=1}^{n} X_{k}$依概率收敘[^依概率收敛]于 $\mu,$ 即 $\boldsymbol{X} \overset P\longrightarrow \mu$
 
-$$
-E(X_1)=E(X_2)=\cdots =E(X_k)=\mu
-$$
-
-(这个接近是概率意义下的接近）即在定理条件下, n个随机变量的算术平均, 当n无限增加时, 几乎变成一个常数。
-
-###### 定理一的另一种叙述
-
-设随机变量 $ X_{1}, X_{2}, \cdots, X_{n}, \cdots$ 相互独立且具有相同的数学期望 和方差：E $\left(X_{k}\right)=\mu$,$D\left(X_{k}\right)=\sigma^{2}(k=1,2, \cdots),$ 则序列 $X=\frac{1}{n} \sum\limits_{k=1}^{n} X_{k}$依概率收敘[^依概率收敛]于 $\mu,$ 即 $\boldsymbol{X} \overset P\longrightarrow \mu$
+> n个随机变量的算术平均, 当n无限增加时, 几乎变成一个常数。
 
 [^依概率收敛]:设 $Y_{1}, Y_{2}, \cdots, Y_{n}$ 是一个随数,若对于任意正数 $\varepsilon$有 $\lim_{n \rightarrow \infty} P\left\{\left|Y_{n}-a\right|<\varepsilon\right\}=1$则称序列 $Y_{1}, Y_{2}, \cdots, Y_{n}$依概率收于 a,记为$Y_{n} \stackrel{P}{\longrightarrow} a$
 
-##### 定理二：伯努利大数定律(概率与频率的关系）
+#### 定理三：辛钦大数定律
+
+设随机变量 $X_{1}, X_{2}, \cdots, X_{n}, \cdots$ 相互**独立**,服从**同一分布**, 且具有**相同数学期望** $E\left(X_{k}\right)=\mu$,$(k=1,2, \cdots)$， 则
+$$
+\frac{1}{n} \sum_{k=1}^{n} X_{k} \stackrel{P}{\longrightarrow} \mu
+$$
+说明：
+
+1. 与定理一相比，不要求方差存在，但需服从同一分布
+2. 可以看作切比雪夫大数定律的推广
+
+#### 定理二：贝努利大数定律
 
 设 $n_{A}$ 是 $n$ 次独立重复试验中事件 $A$ 发生的次数, $p$ 是事件 $A$ 在每次试验中发生的概率, 则对于任意正数 $\varepsilon>0$ 有
 
@@ -1078,87 +1117,49 @@ $$
 
 说明：
 
-1. 伯努利大数定理实际上告诉我们频率依概率收敛到概率
-2. 伯努利大数定律是切比雪夫大数定律的特殊情形
+1. 伯努利大数定理实际上告诉我们频率依概率收敛到概率，以严格的数学形式表达了概率的稳定性
+2. 实际应用中，当试验次数很大时，便可以**用时间发生的频率来代替事件的概率**
+3. 贝努利大数定律是切比雪夫大数定律的特殊情形
 
-##### 定理三：辛钦大数定律（算术平均值和数学期望的关系）
+### 5.2中心极限定理
 
-设随机变量 $X_{1}, X_{2}, \cdots, X_{n}, \cdots$ 相互独立,服从同一分布, 且具有数学期望 $E\left(X_{k}\right)=\mu$,$(k=1,2, \cdots)$， 则
+#### 定理一 独立同分布情形下的中心极限定理
+
+设随机变量 X $_{1}, X_{2}, \cdots, X_{n}, \cdots$ 
+
+1. **相互独立**,服从**同一分布**
+
+2. 具有数学期望和方差：E(X $\left._{k}\right)=\mu$ $D\left(X_{k}\right)=\sigma^{2}>0(k=1,2, \cdots),$
+
+则随机变量之和的标准化变量近似服从标准正态分布
 $$
-\frac{1}{n} \sum_{k=1}^{n} X_{k} \stackrel{P}{\longrightarrow} p
-$$
-说明：
-
-1. 与定理一相比，不要求方差存在，但需服从同一分布
-2. 伯努利大数定律是辛钦大数定律的特殊情况
-
-### 中心极限定理
-
-#### 定理一（独立同分布中心极限定理）
-
-设随机变量$X_1,X_2,\cdots,X_n,\cdots$相互独立，服从同一分布，且具有共同的数学期望和方差：$E(X_k)=\mu$,$D(X_k)=\sigma^2>0$,$k=0,1,2,\cdots$，则随机变量之和的标准化变量$Y_{n}=\frac{\sum_{k=1}^{n} X_{k}-E\left(\sum_{k=1}^{n} X_{k}\right)}{\sqrt{D\left(\sum_{k=1}^{n} X_{k}\right)}}=\frac{\sum_{k=1}^{n} X_{k}-n \mu}{\sqrt{n} \sigma}$的分布函数$F_n(X)$对任意x满足：
-
-$$
-\begin{aligned}
-\lim _{n \rightarrow \infty} F_{n}(x)
-&=\lim _{n \rightarrow \infty} P\left\{\frac{\sum\limits_{k=1}^{n} X_{k}-n \mu}{\sqrt{n} \sigma} \leq x\right\} \\
-&=\int_{-\infty}^{x} \frac{1}{\sqrt{2 \pi}} \mathrm{e}^{-\frac{t^{2}}{2}} \mathrm{d} t=\Phi(x)
-\end{aligned}
+Y_{n}=\frac{\sum\limits_{k=1}^{n} X_{k}-E\left(\sum\limits_{k=1}^{n} X_{k}\right)}{\sqrt{D\left(\sum\limits_{k=1}^{n} X_{k}\right)}}
+=\frac{\sum-n\mu}{\sqrt{n\sigma^2}}
+\stackrel{近似}\sim N(0,1)
 $$
 
-##### 定理一表明
 
-当$n\to\infty$，随机变量序列$Y_n$的分布函数收敛于标准正态分布的分布函数
+定理一表明: 当$n\to\infty$，随机变量序列$Y_n$的分布函数收敛于标准正态分布的分布函数
 
-##### 定理一另一种叙述
+**随机变量序列依分布收敛**：设$X_n$是随机变量序列,$\left\{F_{n}(x)\right\}$ 是对应的分布函数列。如果存在一个具有分布函数$F(x)$ 的随机变量X,使得$\lim \limits_{n \rightarrow \infty} F_{n}(x)=F(x)$则称$X_n$依分布收敛于X,记为 $X_{n} \stackrel{d}{\longrightarrow} X$
 
-设随机变量 X $_{1}, X_{2}, \cdots, X_{n}, \cdots$ 相互独立,服从同一分布,且具有数学期望和方差：E(X $\left._{k}\right)=\mu$ $D\left(X_{k}\right)=\sigma^{2}>0(k=1,2, \cdots),$ 则随机变量之和的标准化变量 $Y_{n}=\frac{\sum\limits_{k=1}^{n} X_{k}-E\left(\sum\limits_{k=1}^{n} X_{k}\right)}{\sqrt{D\left(\sum\limits_{k=1}^{n} X_{k}\right)}}$依分布收敛于 N(0,1).
+#### 定理三 德莫佛一拉普拉斯定理 
 
-**随机变量序列依分布收敛**：设$X_n$是随机变量序列,$\left\{F_{n}(x)\right\}$ 是对应的分布函数列。如果存在一个具有分布函数$F(x)$ 的随机变量X,使得$\lim \limits_{n \rightarrow \infty} F_{n}(x)=F(x)$则称X~n~依分布收敛于X,记为 $X_{n} \stackrel{d}{\longrightarrow} X$
-
-#### 定理二（李雅普诺夫定理）
-
-设随机变量 X $_{1}, X_{2}, \cdots, X_{n}, \cdots$ **相互独立**,它们**具有数学期望 和方差**$E\left(X_{k}\right)=\mu_{k}, \quad D\left(X_{k}\right)=\sigma_{k}^{2} \neq 0(k=1,2, \cdots)$
-
-记 $\quad B_{n}^{2}=\sum_{k=1}^{n} \sigma_{k}^{2}$
-
-若存在正数 $\delta,$ 使得当 $n \rightarrow \infty$ 时,$\frac{1}{B_{n}^{2+\delta}} \sum\limits_{k=1}^{n} E\left\{\left|X_{k}-\mu_{k}\right|^{2+\delta}\right\} \rightarrow 0$
-
-则随机变量之和的标准化变量
-$$
-Z_{n}=\frac{\sum\limits_{k=1}^{n} X_{k}-E\left(\sum\limits_{k=1}^{n} X_{k}\right)}{\sqrt{D\left(\sum\limits_{k=1}^{n} X_{k}\right)}}=\frac{\sum\limits_{k=1}^{n} X_{k}-\sum\limits_{k=1}^{n} \mu_{k}}{B_{n}}
-$$
-依分布收敛于 $N(0,1),$ 即
-$$
-Z_{n} \stackrel{d}{\longrightarrow} N(0,1)
-$$
-
-##### 定理二表明
-
-无论各个随机变量 $X_{1}, X_{2}, \cdots, X_{n}, \cdots$ 服从什么分布,只要满足定理的条件, 那么它们的和 $\sum_{k=1}^{n} X_{k}$当 $n$ 很大时,近似地服从正态分布.
-
-#### 定理三（德莫佛一拉普拉斯定理）
-
-设随机变量 $\eta_{n}(n=1,2, \cdots)$ 服从参数为 $n, p$,$(0<p<1)$ 的二项分布,则 对于任意 $x,$ 恒有
+设随机变量 $X\sim B(n,p)$ ,则 对于任意 $x,$ 恒有
 
 $$
-\frac{\eta_{n}-n p}{\sqrt{n p(1-p)}} \stackrel{d}{\longrightarrow} N(0,1)
+\lim\limits_{n\rightarrow \infty}
+P\{\frac{X-np}{\sqrt{(np)(1-p)}}\le x\}
+=\Phi(x)
 $$
 
-##### 定理三表明
-
-正态分布是二项分布的极限分布, 当n充分大时, 可以利用该定理来计算二项分布的概率.
-
-
-
-
-
-
+定理三表明：正态分布是二项分布的极限分布, 当n充分大时, 可以利用该定理来计算二项分布的概率.
 
 ## END
 
-- 1.2及以上内容在有道云笔记上写成![有道云笔记](https://note.youdao.com/favicon.ico)
-- 其余使用typora
-- 公式由$\KaTeX$渲染
-- docsify对footnote不支持
+- 1.2及以上内容在有道云笔记上写成![有道云笔记](https://note.youdao.com/favicon.ico),其余使用![typora](https://typora.io/img/favicon-64.png)
+- 公式由$\KaTeX$渲染为主，typora渲染引擎为mathjax$\LaTeX$，应该都可以
+- 目前文档可以使用docsify布置，但是docsify不支持对footnote的渲染
+- 推荐南邮的[中国大学MOOC课程](https://www.icourse163.org/learn/NJUPT-1462993175)
+- 该笔记是我之前整理的教材不一样
 
