--- a/大二下/概率论与数理统计/概率论与数理统计/数理统计.md
+++ b/大二下/概率论与数理统计/概率论与数理统计/数理统计.md
@@ -4,7 +4,7 @@
 
 - 抽样理论和试验设计
 - 统计推断（重点介绍）
-  - 抽样分布
+  - 抽样分布的定义与性质
   - 参数估计
     - 点估计
       - 矩估计法
@@ -12,9 +12,9 @@
     - 区间估计
   - 假设检验
 
-## 9 抽样分布
+## 6 样本及抽样分布
 
-### 9-1 总体与样本
+### 6.1总体与样本
 
 **抽样**是按照某种原则从所研究的全部对象中抽取部分研究对象
 
@@ -43,51 +43,52 @@
 
 其中n称为样本容量,在具体试验中样本$X_1,\cdots,X_n$取得的数值$x_1,\cdots,x_n$称为样本观测值或样本值.
 
-#### 统计量
+### 6.2抽样分布
 
-##### 定义
+#### 6.2.1常用统计量
 
-样本$X_1,\cdots,X_n$的*不含任何未知参数*的函数$g(X_1,\cdots,X_n)$,称为总体X的一个**统计量**
+统计量：样本$X_1,\cdots,X_n$的*不含任何未知参数*的函数$g(X_1,\cdots,X_n)$,称为总体X的一个**统计量**
 
 对应的样本值的函数$g(x_1,x_2,\cdots,x_n)$称为统计量$g(X_1,\cdots,X_n)$的**观测值**
 
-##### 几个常用的统计量
+#### 几个常用的统计量
 
-总体：$X$;样本：$X_1,\cdots,X_n$;样本观测值$x_1,\cdots,x_n$
+总体：$X$;样本：$X_1,\cdots,X_n$;样本观测值$x_1,\cdots,x_n$。总体X中需要推断的基本信息有：均值、方差等
 
-总体X中需要推断的基本信息有：均值、方差等
+##### 样本均值
 
-1. 样本均值（样本平均数）*反映总体均值的信息*
-   $$
-   \bar{X}=\frac1n\sum\limits_{i=1}^nX_i
-   $$
-   其观测值为$\bar{x}=\frac1n\sum\limits_{i=1}^nx_i$
+（样本平均数）反映总体均值的信息
+$$
+\bar{X}=\frac1n\sum\limits_{i=1}^nX_i\\
+E(\bar{X})=E(X),D(\bar{X})=\frac{D(X)}{n}
+$$
+- 其观测值为$\bar{x}=\frac1n\sum\limits_{i=1}^nx_i$
 
-2. 样本方差*反映总体方差的信息*
-   $$
-   S^2=\frac1{N-1}\sum\limits_{i-1}^n(X_i-\bar{X})^2
-   $$
-   其观测值为$s^2=\frac1{n-1}\sum\limits_{i=1}^n(x_i-\bar{x})^2$
+##### 样本方差
 
-   **样本均方差**（标准差）$S=\sqrt{S^2}$
+反映总体方差的信息
+$$
+S^2=\frac1{N-1}\sum\limits_{i-1}^n(X_i-\bar{X})^2\\
+E(S^2)=D(X)
+$$
+- 其观测值为$s^2=\frac1{n-1}\sum\limits_{i=1}^n(x_i-\bar{x})^2$
 
-   **其观测值**：$s=\sqrt{s^2}$
+- **样本均方差**（标准差）$S=\sqrt{S^2}$，**其观测值**：$s=\sqrt{s^2}$
 
-   样本方差是用来反映总体方差的信息。**注意**样本方差的分母为$n-1$,而不是$n$
+- 样本方差是用来反映总体方差的信息。
+- **注意**样本方差的分母为$n-1$,而不是$n$。样本方差等于总体方差初期样本容量
 
-   样本方差等于总体方差初期样本容量
+##### k阶样本矩
 
-3. k阶样本矩
+- k阶**原点矩**$A_k=\frac1n\sum\limits_{i=1}{n}X_i^k$，观测值为$a_k=\frac1n\sum\limits_{i=1}^nx_i^k$，用来反映**总体原点矩**的信息
 
-   k阶**原点矩**$A_k=\frac1n\sum\limits_{i=1}{n}X_i^k$，观测值为$a_k=\frac1n\sum\limits_{i=1}^nx_i^k$
+- k阶中心矩$B_k=\frac1n\sum\limits_{i=1}^n(X_1-\bar{X})^k$，观测值为$b_k=\frac1n\sum\limits_{i=1}^n(x_i-\bar{x})^2$，用来反映**总体中心矩**的信息
 
-   用来反映**总体原点矩**的信息
+#### 6.2.2经验分布函数
 
-   k阶中心矩$B_k=\frac1n\sum\limits_{i=1}^n(X_1-\bar{X})^k$，观测值为$b_k=\frac1n\sum\limits_{i=1}^n(x_i-\bar{x})^2$
 
-   用来反映**总体中心矩**的信息
 
-### 9-2 抽样分布介绍
+### 6.2.3 三个重要的抽样分布
 
 统计量的分布称为**抽样分布**
 
@@ -103,7 +104,7 @@
 
 **自由度**表示分布中独立地随机变量的个数
 
-#### $N(0,1)$分布
+#### 6.2.3.0$N(0,1)$分布
 
 如果 $X \sim N\left(\mu_{X}, \sigma_{X}^{2}\right)$ 与 $Y \sim N\left(\mu_{Y}, \sigma_{Y}^{2}\right)$ 是统计独立的正态随机变量，那么：
 
@@ -111,7 +112,7 @@
 - 它们的差也满足正态分布 $V=X-Y \sim N\left(\mu_{X}-\mu_{Y}, \sigma_{X}^{2}+\sigma_{Y}^{2}\right)$
 - U与V两者是相互独立的。（要求X与Y的方差相等）。
 
-#### $\chi^2-$分布
+#### 6.2.3.1$\chi^2-$分布
 
 ##### $\chi^2-$分布定义
 
@@ -120,6 +121,11 @@ $$
 \chi^2=X_1^2+X_2^2+\cdots+X_n^2=\sum\limits_{i=1}^nX_i^2
 $$
 服从自由度为n的$\chi^2$分布.记为$\chi^2\sim \chi^2(n)$.
+
+- 期望与方差：若$\chi^2\sim\chi^2(n)$，则$E(\chi^2)=n$,$D(\chi^2)=2n$
+
+- 性质
+  - （**再生性**）若$\chi^2_1\sim\chi^2(n_2)$,$\chi_2^2\sim\chi^2(n_2)$，且$\chi_1^2$与$\chi_1^2$相互独立，则$\chi_1^2+\chi_2^2\sim\chi^2(n_1+n_2)$
 
 其密度函数为
 $$
@@ -130,17 +136,7 @@ f(t)=\begin{cases}
 $$
 ![卡方分布密度函数](附.assets/chisquarepdf.png)
 
-##### $\chi^2-$分布期望与方差
-
-若$\chi^2\sim\chi^2(n)$，则$E(\chi^2)=n$,$D(\chi^2)=2n$
-
-##### $\chi^2-$分布性质
-
-（**再生性**）若$\chi^2_1\sim\chi^2(n_2)$,$\chi_2^2\sim\chi^2(n_2)$，且$\chi_1^2$与$\chi_1^2$相互独立，则$\chi_1^2+\chi_2^2\sim\chi^2(n_1+n_2)$
-
-#### t-分布
-
-##### t-分布定义
+#### 6.2.3.2t-分布
 
 若$X\sim N(0,1),Y\sim\chi^2(n)$,X与Y相互独立，称$t=\frac{X}{\sqrt{Y/n}}$服从自由度为n的t分布，记为$t\sim t(n)$.其密度函数为
 $$
@@ -152,9 +148,7 @@ $$
 - f(t)关于纵轴$t=0$对称
 - f(t)的计算为N(0,1)的密度函数，即$\lim\limits_{n\to\infty}f(t)=\varphi(t)=\frac 1{\sqrt{2\pi}}e^{-\frac{t^2}2}$,$-\infty<t<+\infty$
 
-#### F-分布
-
-##### F-分布定义
+#### 6.2.3.3F-分布
 
 若$X\sim\chi^2(n_1)$,$Y\sim\chi^2(n_2)$，X与Y相互独立，称$F=\frac{X/n_1}{Y/n_2}$服从自由度为$(n_1,n_2)$的F分布，记为$F\sim F(n_1,n_2)$.其密度函数为
 $$
@@ -164,8 +158,6 @@ f(t)=\begin{cases}
 0,&t\leq 0
 \end{cases}
 $$
-密度函数图形如下
-
 ##### F-分布性质
 
 由F分布的定义可知，若$F\sim F(n_1,F_2)$，则$\frac 1F\sim F(n_2,n_1)$.
@@ -175,13 +167,13 @@ $$
 
 分位点的定理：$F_{1-\alpha}(n_2,n_1)=\frac 1{F_\alpha(n_1,n_2)}$
 
-### 9-3 正态总体的抽样分布
+### 6.3正态总体的抽样分布
 
 **定理1** 设$X_1,\cdots,X_n$为取自$N(\mu,\sigma^2)$的容量为n的样本，$\bar{X}=\frac 1n\sum\limits_{i=1}^n X_i$,$S^2=\frac 1 {n-1}\sum\limits_{i=1}^n(X_i-\bar{X})^2$.则有
 
 1. $\overline{X}\sim N(\mu,\frac{\sigma^2}n)$，即$\frac{\overline{X}-\mu}{\sigma/\sqrt{n}}\sim N(0,1)$
 2. $\frac{(n-1)S^2}{\sigma^2}\sim \chi^2(n-1)$
-3. $\overline{X}$与$S^2$相互独立、
+3. $\overline{X}$与$S^2$相互独立
 4. $\frac{\overline{X}-\mu}{S/\sqrt{n}}\sim t(n-1)$
 
 **定理2**：设$X_1,\cdots,X_n$为取自$N(\mu,\sigma^2)$的容量为n的样本，$Y_a,\cdots,Y_{n_2}$为取自$B(\mu_2,\sigma_2^2)$的容量为$n_2$的样本，且两样本独立
@@ -196,39 +188,35 @@ $$
 2. $F=\frac{S_{1}^{2} / \sigma_{1}^{2}}{S_{2}^{2} / \sigma_{2}^{2}} \sim F\left(n_{1}-1, n_{2}-1\right)$
 3. 假设 $\sigma_{1}^{2}=\sigma_{2}^{2}=\sigma^{2},$ 则 $T=\frac{(\bar{X}-\bar{Y})-\left(\mu_{1}-\mu_{2}\right)}{S_{w} \sqrt{\frac{1}{n_{1}}+\frac{1}{n_{2}}}} \sim t\left(n_{1}+n_{2}-2\right)$
 
-### 9-4 经验分布函数
+## 7参数估计
 
-### 9-5 频率分布表与直方图
+### 7.1 点估计
 
-## 10 点估计
-
-### 矩估计
+#### 7.1.1矩估计
 
 $$
 E(X^l)=A_l=\frac{1}{n}\sum\limits_{i=1}^{n}X_i^l
 $$
 
-
-
-### 最大似然估计
+#### 7.1.2最大似然估计
 
 $$
 L(\theta)=\prod\limits_{i=1}^{n}p(x_i;\theta)
 $$
 
-### 估计量选取的标准
+### 7.2估计量选取的标准
 
 1. 无偏性：估计量的期望等于未知参数的真值
 2. 有效性：方差小
 3. 相合性：当样本数趋于无穷时，估计量趋于真值
 
-## 11 区间估计
+### 7.3区间估计
 
 确定一个区间，使得有比较高的可靠程度相信他包含真值
 
-![](附.assets/正态总体的均值和方差的置信区间.png)
+![区间估计对于正态总体均值和方差的置信区间](附.assets/正态总体的均值和方差的置信区间.png)
 
-## 12 假设检验
+## 8 假设检验
 
 两类错误
 
@@ -237,7 +225,7 @@ $$
 
 显著性假设检验考虑的是第一类错误
 
-### 单正态总体的假设检验
+### 8.2单正态总体的均值和方差的假设检验
 
 ![单正态总体均值的检验](附.assets/单正态总体均值的检验.png)
 ![单正态总体方差的检验](附.assets/单正态总体方差的检验.png)
