概率论考完啦 掀桌

--- a/大二下/概率论与数理统计/概率论与数理统计/概率论.md
+++ b/大二下/概率论与数理统计/概率论与数理统计/概率论.md
@@ -564,7 +564,13 @@ $$
 
 ### 正态分布
 
-设随机变量X的概率密度为$f(x)=\frac{1}{\sqrt{2\pi}\sigma}e^{-\frac{(x-\mu)^2}{2\sigma^2}},-\infty<x<+\infty$,其中$\mu,\sigma(\sigma>0)$为常数，则称X服从参数为$\mu,\sigma$的正态分布，记作$X\sim N(\mu,\sigma^2)$
+设随机变量X的概率密度为
+
+$$
+f(x)=\frac{1}{\sqrt{2\pi\sigma}}e^{-\frac{(x-\mu)^2}{2\sigma^2}},-\infty<x<+\infty
+$$
+
+,其中$\mu,\sigma(\sigma>0)$为常数，则称X服从参数为$\mu,\sigma$的正态分布，记作$X\sim N(\mu,\sigma^2)$
 
 其中$\mu$为均值，$\sigma$为标准差
 
@@ -1090,7 +1096,7 @@ $$
 \lim_{n\to \infty}P\{|\bar{X}-\mu|<\varepsilon\}=\lim_{n\to\infty}P\left\{\left|\frac1n\sum_{k=1}^kX_k-\mu\right|<\varepsilon\right\}=1
 $$
 
-也就是序列 $\bar{X}=\frac{1}{n} \sum\limits_{k=1}^{n} X_{k}$依概率收敘[^依概率收敛]于 $\mu,$ 即 $\boldsymbol{X} \overset P\longrightarrow \mu$
+也就是序列 $\bar{X}=\frac{1}{n} \sum\limits_{k=1}^{n} X_{k}$依概率收敘[^依概率收敛]于 $\mu,$ 即 $\bar{X} \overset P\longrightarrow \mu$
 
 > n个随机变量的算术平均, 当n无限增加时, 几乎变成一个常数。
 
