prettier 并修正错误

--- a/大四上/web数据挖掘/exercises/5+6.md
+++ b/大四上/web数据挖掘/exercises/5+6.md
@@ -7,18 +7,18 @@ C
 
 - A 如果转移矩阵分割成$k\times k$块，系数矩阵存储方式不需要改变
 - B PageRank 的计算一般不采用迭代的方法
-- C 分块计算PageRank的方式会增加v的读取次数
-- D PageRank计算不要考虑不再MapReduce框架之外的方式
+- C 分块计算 PageRank 的方式会增加 v 的读取次数
+- D PageRank 计算不要考虑不再 MapReduce 框架之外的方式
 
 ### 2.选择题：
 
 下列说法错误的是()
 B
 
-- A 转移矩阵每一列的和为1
-- B 面向主题的PageRank不需要了解用户任何信息
+- A 转移矩阵每一列的和为 1
+- B 面向主题的 PageRank 不需要了解用户任何信息
 - C 网页有两种属性：重要性和导航性
-- D PageRank值的大小衡量了网页的重要性
+- D PageRank 值的大小衡量了网页的重要性
 
 ### 3.选择题：
 
@@ -26,14 +26,14 @@ B
 C
 
 - A Google 的算法可以完全杜绝网页搜索作弊者
-- B PageRank是Google搜索引擎的唯一算法
+- B PageRank 是 Google 搜索引擎的唯一算法
 - C 经过足够多次网页冲浪，停留概率大的网页的重要性较高
 - D 垃圾农场中的可达网页是作弊者完全控制的网页
 
 ### 4.判断题：
 
-删除终止点得到的PageRank的值任然可以被认为是随机冲浪者的概率分布
-错
+删除终止点得到的 PageRank 的值任然可以被认为是随机冲浪者的概率分布
+对
 
 ### 5.计算题：
 
@@ -49,11 +49,13 @@ M=\begin{bmatrix}
    \frac{1}{3} & 0           & \frac{1}{2}\\
    \frac{1}{3} & \frac{1}{2} & \frac{1}{2}
 \end{bmatrix}
-
 $$
 
 初始概率分布向量为[1/3,1/3,1/3]时下一步的概率分布向量为
 
+$$
+\vec{v'}=M\vec{v}
+$$
 $$
 \begin{bmatrix}
 a\\b\\c
@@ -66,7 +68,6 @@ M
 \frac{1}{3}\\
 \frac{1}{3}
 \end{bmatrix}
-
 =
 \begin{bmatrix}
 \frac{5}{18}\\
@@ -94,7 +95,7 @@ C
 
 ### 判断题：
 
-在购物篮模型中，购物篮的数量应远大于购物篮中项的数量
+在购物篮模型中，购物篮的数量应远大于购物篮中项的数量（）
 对
 
 ### 判断题：
@@ -104,8 +105,8 @@ C
 
 ### 计算题：
 
-针对以下购物篮数据，假设支持度阈值为3
-请按照**A-priori法**，计算该数据的二元素频繁项集。
+针对以下购物篮数据，假设支持度阈值为 3
+请按照**A-priori 法**，计算该数据的二元素频繁项集。
 
 | Transactions | Items                      |
 | ------------ | -------------------------- |
@@ -118,44 +119,33 @@ C
 | 7            | Bread,Milk                 |
 | 8            | Chips,Jelly                |
 
-#### 1考虑空集
+空集是任何集合的子集，因此空集的支持度为 8。
 
-空集是任何集合的子集，因此空集的支持度为8
+#### 第一遍扫描
 
-#### 2考虑单元素集合——第一遍扫描
+| iterm  | Bread | Jelly | Peanut | Butter | Milk | Chips |
+| ------ | ----- | ----- | ------ | ------ | ---- | ----- |
+| number | 1     | 2     | 3      | 4      | 5    | 6     |
+| count  | 6     | 3     | 1      | 3      | 3    | 3     |
 
-| 项名称  | {Bread} | {Jelly} | {Peanut} | {Butter} | {Milk} | {Chips} |
-| ---- | ------- | ------- | -------- | -------- | ------ | ------- |
-| 整数   | 1       | 2       | 3        | 4        | 5      | 6       |
-| 项计数值 | 6       | 3       | 1        | 3        | 3      | 3       |
+#### 第二遍扫描
 
-#### 3考虑双元素集合——第二遍扫描
+检查所有项的计数值，以确定哪些项构成单元素频繁项集。对于 A-Priori 算法的第二遍扫描，我们会只给频繁项重新编号，编号范围是 1 到 m。
 
-检查所有项的计数值，以确定哪些项构成单元素频繁项集。对于A-Priori算法的第二遍扫描，我们会只给频繁项重新编号，编号范围是1到m。
+| 项集           | 整数 | 支持度 |
+| -------------- | ---- | ------ |
+| {Bread,Jelly}  | 1    | 2      |
+| {Bread,Butter} | 2    | 3      |
+| {Bread,Milk}   | 3    | 2      |
+| {Bread,Chips}  | 4    | 1      |
+| {Jelly,Butter} | 5    | 1      |
+| {Jelly,Milk}   | 6    | 0      |
+| {Jelly,Chips}  | 7    | 1      |
+| {Jelly,Butter} | 8    | 1      |
+| {Butter,Milk}  | 9    | 1      |
+| {Butter,Chips} | 10   | 0      |
+| {Milk,Chips}   | 11   | 1      |
 
-| 项名称            | 整数  | 支持度 |
-| -------------- | --- | --- |
-| {Bread,Jelly}  | 1   | 2   |
-| {Bread,Butter} | 2   | 3   |
-| {Bread,Milk}   | 3   | 2   |
-| {Bread,Chips}  | 4   | 1   |
-| {Jelly,Butter} | 5   | 1   |
-| {Jelly,Milk}   | 6   | 0   |
-| {Jelly,Chips}  | 7   | 1   |
-| {Jelly,Butter} | 8   | 1   |
-| {Butter,Milk}  | 9   | 1   |
-| {Butter,Chips} | 10  | 0   |
-| {Milk,Chips}   | 11  | 1   |
+所以该数据的二元素频繁项集有：
 
-所以{Bread,Butter}是一个频繁项集。
-
-#### 综上
-
-有非空频繁项集：
-
-1. {Bread} 
-2. {Jelly}
-3. {Butter}
-4. {Milk}
-5. {Chips}
-6. {Bread,Butter}
+1. {Bread,Butter}
