--- a/大三上/传感器技术/传感器提纲.md
+++ b/大三上/传感器技术/传感器提纲.md
@@ -119,7 +119,9 @@ $$
 k=\frac
 {n\sum{x_iy_i} -\sum{x_i}\sum{y_i}}
 {n\sum{x_i^2}-(\sum{x_i})^2}
-\\
+$$
+
+$$
 b=\frac
 {\sum{x_i^2}{\sum{y_i}-\sum{x_i}\sum{x_iy_i}}}
 {n\sum{x_i^2}-(\sum{x_i})^2}
@@ -206,9 +208,10 @@ $$
 
 $$
 \frac{dR}{R}=(1+2\mu)\epsilon+\frac{d\rho}{\rho}
-\\
+
 \frac{\Delta R}{R}=K_0\epsilon
 $$
+
 - 金属丝材料的应变电阻效应以**结构尺寸**变化为主
   - $\frac{\mathrm{d}\rho}{\rho}=C\frac{\mathrm{d}V}{V}$
   - $K_m=1+2\mu+C(1-2\mu)$
@@ -440,8 +443,9 @@ $\frac{\Delta R}{R}=\alpha_t\Delta t +K(\beta_s-\beta_t)\Delta t$
 长L，宽w，厚d，在L两端制有**面接触型输入电流极（控制电极）**，在w两端制有**点接触型输出电压极（霍尔电极）**，即构成霍尔元件。
 
 $$
-U_H=\frac{R_H}{d}IB\\
+U_H=\frac{R_H}{d}IB
 $$
+
 - 霍尔系数：$R_H=\frac{1}{en}$
 - 霍尔元件灵敏度$K_H=\frac{R_H}{d}=\frac{U_H}{IB} (V/A\cdot T)$
 
