--- a/大二下/概率论与数理统计/概率论与数理统计/概率论.md
+++ b/大二下/概率论与数理统计/概率论与数理统计/概率论.md
@@ -77,8 +77,8 @@
 
 | 运算关系       | 符号表示                           |
 | -------------- | ---------------------------------- |
-| 事件的包含     | $A\subset B  \ or\  B\supset A$    |
-| 事件相等       | $A=B \ \ A \subset B \ A\supset B$ |
+| 事件的包含     | $A\subset B$ or $B\supset A$    |
+| 事件相等       | $A=B$, $A \subset B$ and $A\supset B$ |
 | 事件的并（和） | $A\cup B$                          |
 | 事件的交（积） | $A\cap B=AB$                       |
 | 事件的差       | $A-B$                              |  |
@@ -88,8 +88,12 @@
 
 完备事件组:设S为试验E的样本空间，B1，B2，…，Bn为E的一组事件。若
 
-1. Bi ∩ Bj=∅ （i≠j且i、j=1，2，…，n）；
-2. B1∪B2∪…∪Bn=S，
+$$
+\begin{align}
+   & B_i\cap B_j= \emptyset (\ i \neq j\ ,\ i,j=1,2,\dots,n)\\
+   & B_1\cup B_2 \cup \dots B_n=S
+\end{align}
+$$
 
 则称B1，B2，…，Bn为样本空间S的一个完备事件组（划分）。定义在2-1有说明。定义为充要条件，反之也成立
 
@@ -126,21 +130,23 @@ $$
 #### 事件的频率
 
 在相同的条件下进行了n次实验，其中事件A发生的次数为$n_A$，比值$\frac{n_A}{n}$称为事件A发生的频率，记为$f_n(A).$,其中$n_A$称为事件A发生的频数
+
 $$
-f_n(A)=\frac{n_A}{n}=\frac{事件A发生的频数}{试验总次数}
+f_n(A)=\frac{n_A}{n}=\frac{\text{事件A发生的频数}}{\text{试验总次数}}
 $$
 
 ##### 频率的性质
 
 1. 非负性：$0\leq f_n(A) \leq 1$;
 2. 规范性：$f_n(\Omega)=1$;
-3. 可加性：$若A_1,A_2,\cdots,A_m为m个两两不相容的事件， \\ 则  f_n(A_1\bigcup A_2\bigcup\cdots\bigcup A_m)=f_n(A_1)+f_n(A_2)+\cdots +f_n(A_m)$
+3. 可加性：若$A_1,A_2,\cdots,A_m$为m个两两不相容的事件，则  $f_n(A_1\bigcup A_2\bigcup\cdots\bigcup A_m)=f_n(A_1)+f_n(A_2)+\cdots +f_n(A_m)$
 
 #### 事件的概率
 
 ##### 定义1(频率趋近概率)
 
 在相同的条件下进行大量的重复试验，随机事件A出现的频率$\frac{n_A}{n}$将稳定地在某个固定的数值p的附近摆动，称这个稳定值p为随机事件A的**概率**，记为P(A)，即P(A)=p
+
 $$
 \lim_{n\to \infty}f_n(A)=P(A)
 $$
@@ -189,7 +195,7 @@ $$
 若事件A包含k个基本事件，即$A={e_{1_1,}e_{i_2},\cdots,e_{i_k}}$,于是
 
 $$
-P(A)=\sum_{j=1}{k}{P(e_{i_j})}=\frac{k}{n}=\frac{A包含的基本事件数}{\Omega中基本事件总数}
+P(A)=\sum_{j=1}{k}{P(e_{i_j})}=\frac{k}{n}=\frac{\text{A包含的基本事件数}}{\Omega\text{中基本事件总数}}
 $$
 
 古典概型中**事件概率的计算公式**也称为**概率的古典定义**。
@@ -246,8 +252,6 @@ $$
 P(AB)=P(B|A)P(A)=P(A|B)P(B)
 $$
 
-
-
 #### 1.4.3全概率公式和贝叶斯公式
 
 1. 掌握并会利用全概率公式和贝叶斯公式求解相关问题；
@@ -255,15 +259,16 @@ $$
 
 ### 全概率公式
 
-**定义1.6** 设随机试验E的样本空间为S,$B_1,B_2,\cdots,B_n$,($P(B_i)>0,i=1,2,\cdots ,n$)是样本空间S的一组事件，若满足：
+**定义1.6** 设随机试验E的样本空间为S, $B_1,B_2,\cdots,B_n$,($P(B_i)>0,i=1,2,\cdots,n$)是样本空间S的一组事件，若满足：
 
 1. $B_1,B_2,\cdots,B_n$，互不相容，即$B_i\cap B_j=\emptyset,i\neq j,i,j=1,2,\cdots,n$;
 
 2. $S=B_1\cup B_2\cup \cdots\cup B_n$.
 
-   则称$B_1,B_2,\cdots,B_n$为样本空间S的一个**划分**
+则称$B_1,B_2,\cdots,B_n$为样本空间S的一个**划分**
 
 **定理1.2** 设随机试验E的样本空间为S,$B_1,B_2,\cdots,B_n$是样本空间S的一个划分，则对任一事件A，有
+
 $$
 P(A)=\sum_{i=1}^n P(B_i)P(A|B_i)
 $$
@@ -271,11 +276,13 @@ $$
 ### 贝叶斯公式(Bayes)
 
 设随机试验E的样本空间为$\Omega$，A为E的事件，$B_1,B_2,\cdots,B_n$是$\Omega$的一个划分，且$P(B_i)>0(i=1,2,\dots,n),P(A)>0$,则
+
 $$
 P(B_i|A)
 =\frac{P( AB_i )}{P(A)}
 =\frac{P(B_i)P(A|B_i)}{\sum\limits_{j=1}^{n}P(B_j)P(A|B_j)},i=1,2,\dots,n(2)
 $$
+
 上式为贝叶斯公式,由全概率公式可知分母为$P(A)$，由条件概率公式可知分子为$P(AB_i)$
 
 ### 1.5事件的独立性与贝努里实验
@@ -351,7 +358,7 @@ $$
 
 **定义**：设随机变量E的样本空间是$\Omega$，若对每个$\omega\in \Omega$，有定义在$\Omega$上的一个实数$X(\omega)$与之对应，称这样一个定义在$\Omega$上的单值实函数$X=X(\omega)$为**随机变量**，简记为$r,v,X$.随机变量一般用大写英文字母$X,Y,Z$等或希腊字母$\xi,\eta,\zeta$等表示.*随机变量定义域为$\Omega$值域为R。*
 
-**定义**：所有可能取值为有限个或可列无限个的随机变量称为**离散型随机变量**.若X为离散型随机变量，不妨设其取值为$x_1,x_2,\cdots,x_n,\cdots,$令$P\{\omega|X(\omega)=x_k\}\overset{简记}{=}P\{X=x_k\}\overset{\Delta}{=}p_k,k=1,2,\cdots,$称$p_k=P\{X=x_k\},k=1,2,\cdots$为离散型r.v.X的**分布律**或**分布列**或**概率分布**
+**定义**：所有可能取值为有限个或可列无限个的随机变量称为**离散型随机变量**.若X为离散型随机变量，不妨设其取值为$x_1,x_2,\cdots,x_n,\cdots,$令$P\{\omega|X(\omega)=x_k\}\overset{\text{简记}}{=}P\{X=x_k\}\overset{\Delta}{=}p_k,k=1,2,\cdots,$称$p_k=P\{X=x_k\},k=1,2,\cdots$为离散型r.v.X的**分布律**或**分布列**或**概率分布**
 
 分布律的**性质**：
 
@@ -475,8 +482,10 @@ $$
 | $P(X=x_k)$ | 概率                     |
 
 $$
-P\{a<X<b\}=\int_a^bf(x)dx=F(b)-F(a);两边取等或不取都一样\\
-f(x)=\frac{F(x)}{dx};不需要考虑间断点的导数
+P\{a<X<b\}=\int_a^bf(x)dx=F(b)-F(a)\text{;两边取等或不取都一样}
+$$
+$$
+f(x)=\frac{F(x)}{dx}\text{;不需要考虑间断点的导数}
 $$
 
 #### 定义
@@ -497,9 +506,14 @@ $$
 4. 若f(x)在x点连续，则有$F'(x)=f(x)$
 
 注：连续型随机变量的分布函数是**连续函数**
+
 $$
-f(x)=\lim_{\Delta x\to 0^+}\frac{F(x+\Delta x)-F(x)}{\Delta x}=\lim_{\Delta x \to 0^+}\frac{P\{x<X\leq x+\Delta x\}}{\Delta x}\\
-上式可以看做单位长度的概率质量，当\Delta 很小时，有:\\
+f(x)=\lim_{\Delta x\to 0^+}\frac{F(x+\Delta x)-F(x)}{\Delta x}=\lim_{\Delta x \to 0^+}\frac{P\{x<X\leq x+\Delta x\}}{\Delta x}
+$$
+
+上式可以看做单位长度的概率质量，当\Delta 很小时，有:
+
+$$
 P\{x<X\leq x+\Delta x\}\approx f(x)\Delta x
 $$
 
@@ -510,7 +524,7 @@ $$
 | 3   | $P\{X=x_k\}=F(x_k)-F(x_k-0)$             | $f(x)=F'(x)$                           |
 | 4   | F(x)为阶梯函数，右连续                   | F(x)为连续函数                         |
 | 5   | $P\{X=a\}\geq 0,\forall a\in\mathbb{R}$  | $P\{X=a\}=0,\forall a\in \mathbb{R}$   |
-| 6   | $P\{X=a\}=0\Leftrightarrow不可能事件$    | $P\{X=a\}=0\nLeftrightarrow不可能事件$ |
+| 6   | $P\{X=a\}=0\Leftrightarrow$不可能事件   | $P\{X=a\}=0\nLeftrightarrow$不可能事件 |
 
 ### 均匀分布与几何概型
 
