--- a/大四上/web数据挖掘/exercises/5+6.md
+++ b/大四上/web数据挖掘/exercises/5+6.md
@@ -93,17 +93,17 @@ C
 - C 可信度
 - D 错误率
 
-### 判断题：
+### 3.判断题：
 
 在购物篮模型中，购物篮的数量应远大于购物篮中项的数量（）
 对
 
-### 判断题：
+### 4.判断题：
 
 频繁项集不可以用于生物标志物关联（）
 错
 
-### 计算题：
+### 5.计算题：
 
 针对以下购物篮数据，假设支持度阈值为 3
 请按照**A-priori 法**，计算该数据的二元素频繁项集。
