correct file content

--- a/大四上/web数据挖掘/exercises/5+6.md
+++ b/大四上/web数据挖掘/exercises/5+6.md
@@ -33,7 +33,9 @@ C
 ### 4.判断题：
 
 删除终止点得到的 PageRank 的值任然可以被认为是随机冲浪者的概率分布
-对
+**错**
+
+只能衡量重要性，不能认为是概率分布
 
 ### 5.计算题：
 
@@ -56,6 +58,7 @@ $$
 $$
 \vec{v'}=M\vec{v}
 $$
+
 $$
 \begin{bmatrix}
 a\\b\\c
@@ -123,28 +126,31 @@ C
 
 #### 第一遍扫描
 
-| iterm  | Bread | Jelly | Peanut | Butter | Milk | Chips |
-| ------ | ----- | ----- | ------ | ------ | ---- | ----- |
-| number | 1     | 2     | 3      | 4      | 5    | 6     |
-| count  | 6     | 3     | 1      | 3      | 3    | 3     |
+| iterm  | number | count | x   |
+| ------ | ------ | ----- | --- |
+| Bread  | 1      | 6     | 1   |
+| Jelly  | 2      | 3     | 2   |
+| Peanut | 3      | 1     | 0   |
+| Butter | 4      | 3     | 3   |
+| Milk   | 5      | 3     | 4   |
+| Chips  | 6      | 3     | 5   |
 
 #### 第二遍扫描
 
 检查所有项的计数值，以确定哪些项构成单元素频繁项集。对于 A-Priori 算法的第二遍扫描，我们会只给频繁项重新编号，编号范围是 1 到 m。
 
-| 项集           | 整数 | 支持度 |
-| -------------- | ---- | ------ |
-| {Bread,Jelly}  | 1    | 2      |
-| {Bread,Butter} | 2    | 3      |
-| {Bread,Milk}   | 3    | 2      |
-| {Bread,Chips}  | 4    | 1      |
-| {Jelly,Butter} | 5    | 1      |
-| {Jelly,Milk}   | 6    | 0      |
-| {Jelly,Chips}  | 7    | 1      |
-| {Jelly,Butter} | 8    | 1      |
-| {Butter,Milk}  | 9    | 1      |
-| {Butter,Chips} | 10   | 0      |
-| {Milk,Chips}   | 11   | 1      |
+|       | 项集           | 支持度 |
+| ----- | -------------- | ------ |
+| {1,2} | {Bread,Jelly}  | 2      |
+| {1,3} | {Bread,Butter} | 3      |
+| {1,4} | {Bread,Milk}   | 2      |
+| {1.5} | {Bread,Chips}  | 1      |
+| {2,3} | {Jelly,Milk}   | 0      |
+| {2,4} | {Jelly,Chips}  | 1      |
+| {2.5} | {Jelly,Butter} | 1      |
+| {3,4} | {Butter,Milk}  | 1      |
+| {3,5} | {Butter,Chips} | 0      |
+| {4,5} | {Milk,Chips}   | 1      |
 
 所以该数据的二元素频繁项集有：
 
