--- a/大四上/web数据挖掘/exercises/1.3.md
+++ b/大四上/web数据挖掘/exercises/1.3.md
@@ -1,32 +1,31 @@
-## 1.3
+# exercises for section 1.3.1
 
-## 1.3.1
-
-Suppose there is a repository of ten million documents. What (to the nearest integer)  is the IDF for a word that appears in 
+Suppose there is a repository of ten million documents. What (to the nearest integer) is the IDF for a word that appears in
 
 1. 40 documents
 2. 10,000 documents
 
-**MY** solution: 
+**MY** solution:
 
 1. $IDF_i=log_2\frac{N}{n_i}=log_2\frac{ten\ million}{40}\approx18$
 2. $IDF_i=log_2\frac{N}{n_i}=log_2\frac{ten\ million}{40}\approx10$
 
 ```javascript
-Math.log2(10_000_000/40)
-Math.log2(10_000_000/10_000)
+Math.log2(10_000_000 / 40);
+Math.log2(10_000_000 / 10_000);
 ```
 
 ## 1.3.2
 
-Suppose there is a repository of ten million documents, and word $w$ appears in 320 of them. In a particular document $d$, the maximum number of occurrences of a word is 15. Approximately what is the IF.IDF score for $w$ if that word appears 
+Suppose there is a repository of ten million documents, and word $w$ appears in 320 of them. In a particular document $d$, the maximum number of occurrences of a word is 15. Approximately what is the IF.IDF score for $w$ if that word appears
 
 1. once
 2. five times?
 
 **My** solution:
 
-Suppose term $i$ appears in $n_i$ of $N$ Documents in the collection. Define $f_{ij}$  to be the *frequency* (number of occurences) of term (word) $i$ in document $j$. Then the ***Term Frequency times Inverse Document Frequency*** is:
+Suppose term $i$ appears in $n_i$ of $N$ Documents in the collection. Define $f_{ij}$  to be the _frequency_ (number of occurences) of term (word) $i$ in document $j$. Then the **_Term Frequency times Inverse Document Frequency_** is:
+
 $$
 TF.IDF=TF_{ij}\times IDF_i=\frac{f_{ij}}{max_kf_{kj}}\times\log_2\frac{N}{n_i}
 $$
@@ -35,11 +34,10 @@ $$
 2. $TF.IDF=\frac{5}{15}\times \log_2\frac{10,000,000}{320}\approx 4.997$
 
 ```javascript
-1/15*Math.log2(10_000_000/320)
-5/15*Math.log2(10_000_000/320)
+(1 / 15) * Math.log2(10_000_000 / 320);
+(5 / 15) * Math.log2(10_000_000 / 320);
 ```
 
 Links:
 
 - https://math.stackexchange.com/questions/3356695/exercise-1-3-from-mining-of-massive-data-sets-book
-
