--- a/大四上/web数据挖掘/复习.md
+++ b/大四上/web数据挖掘/复习.md
@@ -1,6 +1,6 @@
 # 复习课
 
-题量不是很多，难度已经降低了很多。
+题量不是很多，难度已经降低了很多。前六章为主，七八九很少。
 
 ## 题型
 
@@ -11,31 +11,28 @@
 简答
 综合
 
-## 内容
+## 1 数据挖掘基本概念
 
-前六章为主，七八九很少。
-
-### 1.1数据挖掘基本概念
+### 1.1 数据挖掘基本概念
 
 数据挖掘的基本含义
 与及其学习的关系
 他们的目标是不一样的，算法很多都是类似的
 
-### 1.2数据挖掘的统计限制
+### 1.2 数据挖掘的统计限制
 
 没有免费午餐定理
 bonferroni's Principle
 
-### 1.3相关知识
+### 1.3 相关知识
 
-### 1.3.1词项在文档中的重要性TF.IDF
+### 1.3.1 词项在文档中的重要性 TF.IDF
 
-### 1.3.2哈希函数
+### 1.3.2 哈希函数
 
+## 2MapReduce 及新协议栈
 
-# 2MapReduce及新协议栈
-
-## 2.1分布式文件系统
+### 2.1 分布式文件系统
 
 - 文件非常大
 - 文件极少更新
@@ -46,18 +43,18 @@ bonferroni's Principle
 只允许追加操作
 分块存储而不是文件存储
 
-### 2.1.1计算节点的物理结构
+#### 2.1.1 计算节点的物理结构
 
-### 2.1.2大规模文件系统的结构
+#### 2.1.2 大规模文件系统的结构
 
-什么是MapReduce：
+什么是 MapReduce：
 
-- MapReduce是一个分布式的计算模式，用于大规模数据集的**并行计算**
+- MapReduce 是一个分布式的计算模式，用于大规模数据集的**并行计算**
 - 主要思想：**分而治之**
 - 用于搜索领域，解决**海量数据的计算问题**
-- 只能串行计算的问题，无法使用MapReduce
+- 只能串行计算的问题，无法使用 MapReduce
 
-## 2.3实验MapReduce 算法
+### 2.3 实验 MapReduce 算法
 
 - 字数统计
 - 关系代数
@@ -66,64 +63,43 @@ bonferroni's Principle
 - 矩阵-向量乘法
 - 矩阵-矩阵乘法
 
-## 3相似项发现
+## 3 相似项发现
 
-### 3.1近邻搜索的应用
+### 3.1 近邻搜索的应用
 
 求包和集合的相似度
 
-### 3.2文档的shingling
+### 3.2 文档的 shingling
 
 #### 3.2.1 k-shingle
 
+#### 3.3.2 最小哈希 minhashing
 
-习题答案：2/5,1/6,1/3;1/8,1/8,1/8
-Butb,utby,tbyt,.....
+## 4 流数据挖掘
 
-   s ....
-h  
-.
-.
-.
-#### 3.3.2 最小哈希minhashing
+hadoop 不适合流计算
 
-
-
-## 4流数据挖掘
-
-hadoop不适合流计算
-
-0.0306
-0.0239
-max=0 ... 2^0=1
-21
-
-
-## 链接分析
+## 5 链接分析
 
 采集器陷阱及抽税算法
 
 引入组合器，容易产生一种内存振荡，解决方案是分块
-面向主题的pagerank 
+面向主题的 pagerank
 
 权威页导航页
 
-## 频繁项集
+## 6 频繁项集
 
 - 关联规则：可信度，兴趣度、含义概念计算
-- 
 
+## 7 聚类
 
-## 7聚类
+kmean 是一种点分配算法
 
-kmean是一种点分配算法
+## 8 web 广告
 
-## 6web广告
-
-web广告的主要场景，
+web 广告的主要场景，
 
 贪婪算法是一种在线算法
 贪心算法是一种在线算法
 维数灾难
-
-- 
