--- a/大四上/web数据挖掘/笔记.md
+++ b/大四上/web数据挖掘/笔记.md
@@ -39,10 +39,10 @@
 
 异中求同 同中求异（目标不同，算法相同）
 
-![](../../pics/2022-01-04-21-17-49.png)
+![](./pics/2022-01-04-21-17-49.png)
 
-机器学习是一门多学科交叉专业，涵盖概率论知识，统计学知识，近似理论知识和复杂算法知识，使用计算机作为工具并致力于真实实时的模拟人类学习方式， 并将现有内容进行知识结构划分来有效提高学习效率。
-机器学习三要素： 模型，策略，算法。
+**机器学习**是一门多学科交叉专业，涵盖概率论知识，统计学知识，近似理论知识和复杂算法知识，使用**计算机作为工具**并致力于真实实时的**模拟人类学习**方式， 并**将现有内容进行知识结构划分**来有效提高学习效率。
+**机器学习三要素**： 模型，策略，算法。
 
 数据挖掘技术是机器学习算法和数据存取技术的结合，利用机器学习提供的统计分析、知识发现等手段分析海量数据，同时利用数据存取机制实现数据的高效读写。
 
@@ -76,57 +76,90 @@
 2. "just right"
 3. 过拟合 High variance：拟合偏差小，但是结果不符合认知，在新的测试样本情况下，很大可能不会落在拟合曲线上，（将样本独有特征学了，树叶无锯齿->非树叶）
 
-#### 整体情报预警
-
-这是引出邦弗朗尼原理的例子
-
 #### 邦弗朗尼原理
 
-数据挖掘所谓发现的模型可能是没有任何意义的，统计上称为**邦弗朗尼原理** 。
+**数据挖掘所谓发现的模型可能是没有任何意义的**，统计上称为**邦弗朗尼原理** 。例如美国提出的整体情报预警 TIA 可能没有意义
 
 <!-- 第二周 -->
 
 ### 相关知识
 
-#### 词语在文档中的重要性
+- **词语在文档中的重要性**：TF.IDF 词项频率乘以逆文档频率 Term Frequency times Inverse Document Frequency：用于度量词语重要性
 
-TF.IDF 词项频率乘以逆文档频率 Term Frequency times Inverse Document Frequency：用于度量词语重要性
+- 哈希函数 Hash function: 输入是键值 hash-key，输出是桶编号 bucket number 通常为一个整数。通常会使用$h(x) = x\  mod \ B$通常使用质数作为 B，使得分配近似均匀分布
 
-- 哈希函数 Hash function: hash-key->bucket number. 通常会使用$h(x) = x\  mod \ B$通常使用质数作为 B，使得分配近似均匀分布
 - 索引 index
-- 二级存储器 secondary Storage: 容量大，断电不易失去，读取速度慢（相对于 RAM 内存）
+
+- 二级存储器 secondary Storage: 通常指硬盘光盘。容量大，断电不易失去，读取速度慢（相对于 RAM 内存）
+
 - e 和幂定理 The base of Natural Logarithms and Power Law
+
+假设词 $i$ 出现在 $N$ 个文档中的 $n_i$个文档中. 定义 $f_{ij}$ 为在文档 $j$ 中词$i$出现的频率（次数），然后词项$i$在文档$j$中的 **词项频率乘以逆文档频率** 为：
+
+$$
+TF.IDF=TF_{ij}\times IDF_i=\frac{f_{ij}}{max_{k}f_{kj}}\times\log_2\frac{N}{n_i}
+
+
+$$
 
 <!-- ## 第三周-分布式文件系统 -->
 
+自然对数的底数 e，e 是当 x 趋向于无穷大时，$(1+\frac{1}{x})^x$的极限
+
+$$
+e^x=\sum_{i=0}^{\infty}\frac{x^i}{i!}=1+x+\frac{x^2}{2!}+\frac{x^3}{3!}+\cdots
+$$
+
 ## 2 MapReduce 及新协议栈
+
+- 大数据如何存储：GFS、HDFS 等分布式文件系统
+
+- 大数据如何计算：MapReduce 分布式计算框架
 
 ### 2.1 分布式文件系统
 
-1. 海量(enormous)冷(rarely updated)数据如何存储？使用**分布式文件系统**存储
-   1. 硬盘够不够大：分布式存储
-   2. 硬盘够不够安全：冗余机制
-2. 分布式文件系统的特点
-   1. 使用普通廉价的硬件，**硬件故障是常态**而不是异常
-   2. 流式数据访问：数据批量读取而非随机读写，擅长做**数据分析**而不是数据处理
-   3. 大规模数据集
-   4. 简单一致性模型，一次性写多次读，一旦写入不能修改。**现在只允许追加操作**
-   5. 文件是**文件块**，而不是文件整体存放
-3. 分布式文件系统的组成
-   1. Name Node and Secondary Name Node: edit logs and fsimage
-   2. Data Node
-4. 大量的数据如何计算？
-   1. MapReduce
+**分布式文件系统**的两个特点：
+
+1. **文件非常大**，如 TB 级的文件。
+
+2. **文件极少更新**，额外数据追加到文件尾部。
+
+海量(enormous)冷(rarely updated)数据如何存储？使用**分布式文件系统**存储
+
+1. 硬盘够不够大：分布式存储
+2. 硬盘够不够安全：冗余机制
+
+分布式文件系统原理
+
+1. 使用普通廉价的硬件，**硬件故障是常态**而不是异常
+2. 流式数据访问：数据批量读取而非随机读写，擅长做**数据分析**而不是数据处理
+3. 文件**非常大**，大规模数据集
+4. 文件块有**副本**
+5. 简单一致性模型，**一次性写多次读**，一旦写入不能修改。**现在只允许追加操作**
+6. 文件是**文件块 chunk**128M，而不是文件整体存放
+
+分布式文件系统的组成
+
+1. Name Node and Secondary Name Node: edit logs and fsimage
+2. Data Node
+
+主要的故障模式：
+
+1. 单节点故障(比如某节点上的硬盘发生崩溃)
+
+2. 单机架故障(比如机架内节点间的互连网络及当前机架到其他机架的互连网络发生故障)。
 
 <!-- ## 第四周-MapReduce 框架 -->
 
 ### 2.2 MapReduce 框架
 
+智能用于并行计算，不可以用于串行计算。
+
 1. 不同的 Map 任务和 Reduce 任务之间不会进行通信
 2. 用户不能显式地进行机器之间的信息交换，所有通信依赖 MapReduce 框架
 3. MapReduce 不适用于**实时**的计算，如计算当前某产品的抢购数量
 4. MapReduce 采用“分而治之”策略，一个存储在分布式文件系统中的大规模数据集，会被切分成许多独立的分片（split），这些分片可以被多个 Map 任务并行处理
-   MapReduce 设计的一个理念就是“计算向数据靠拢”，而不是“数据向计算靠拢”，因为，移动数据需要大量的网络传输开销
+   MapReduce 设计的一个理念就是“**计算向数据靠拢**”，而不是“数据向计算靠拢”，因为，移动数据需要大量的网络传输开销
 5. Reduce 任务需要远远小于 Map 的数目，同时应当多于 Reducer 的数目
 6. 用于搜索领域，解决海量数据的计算问题
 7. MapReduce 将复杂的、运行于大规模集群上的并行计算过程高度地抽象到了两个函数：Map 和 Reduce
@@ -140,14 +173,22 @@ TF.IDF 词项频率乘以逆文档频率 Term Frequency times Inverse Document F
 
 1. 字数统计
 2. 关系代数计算
-3. 基于 MapReduce 的矩阵-向量乘法
-4. 基于 MapReduce 的矩阵-矩阵乘法
+   1. 选择，投影，
+   2. 并、交、差，
+   3. 自然连接（一定要存在一个公共属性），分组和聚合
+3. 基于 MapReduce 的矩阵 M-向量 v 乘法：
+   1. v 能入内存：
+   2. v 不能放入内存：将 v 分成水平条将 M 分成垂直条分别放入内存计算再合并
+4. 基于 MapReduce 的矩阵-矩阵乘法：可以通过两个 MapReduce 的串联，第一个是一个**自然连接**，第二个是一个**分组聚合**
+
+![](pics/没有定义组合器的Reduce.png)
+![](pics/定义组合器的Reduce.png)
 
 ## 3 相似项发现
 
 相似项是一个基本数据挖掘问题，应用于去重，查找文档相似度。
 
-![](../../pics/相似项发现思路.png)
+![](./pics/相似项发现思路.png)
 
 - 相似项发现问题表述为寻找具有相对较大交集的集合问题;
 - 文档的 “shingling”技术;
@@ -164,7 +205,9 @@ TF.IDF 词项频率乘以逆文档频率 Term Frequency times Inverse Document F
 
 ### 3.1 近邻搜索的应用
 
-#### 集合的 Jaccard 相似度
+#### 集合的相似度
+
+**Jaccard 相似度衡量集合的相似度**(要知道如何计算)
 
 Jaccard 相似度主要用于计算符号度量或布尔值度量的个体间的相似度，因为个体的特征属性都是由符号度量或者布尔值标识，因此无法衡量差异具 体值的大小，只能获得“是否相同”这个结果，所以 Jaccard 相似度只关心个体间共同具有的特征是否一致这个问题。
 
@@ -174,7 +217,7 @@ $$
 
 如果是包运算，并集不要合并相同的元素，直接元素数相加
 
-#### 文档的相似性
+#### 文档的相似度的应用
 
 - 抄袭文档
 - 镜像页面
@@ -188,36 +231,61 @@ $$
 
 ### 3.2 文档的 Shingling
 
-- 3.2.1 k-single
-- 3.2.2 shingle 大小的选择：k 应足够大，以保证任意给定的 shingle 出现在任意文档中的概率较低。邮件 5，论文 9。
+- 3.2.1 k-single：注意是**集合**，不能有重复
+- 3.2.2 shingle 大小的选择：**k 应足够大，以保证任意给定的 shingle 出现在任意文档中的概率较低**。邮件 5，论文 9。
 - 3.2.3 对 shingle 进行哈希：9-single 通常映射到 4 个字节
-- 3.2.4 基于词的 shingle：Shingle 定义为一个停用词加上后续的两个词（不管是否是停用词）
+- 3.2.4 基于词的 shingle：Shingle 定义为一个**停用词**加上后续的两个词（不管是否是停用词）
 
 ### 3.3 保持相似度的集合摘要表示
 
-1. 集合的矩阵表示：特征矩阵并非数据真正的存储方式，但是作为数据可视化的一种方式则是非常有用的。大部分是 0，只需存储 1 所在的位置。
-2. 最小哈希 minhashing
-3. 最小哈希及 Jaccard 相似度：两个集合经随机排列转换之后得到的两个最小哈希值相等的概率等于这两个集合的 Jaccard 相似度。
-4. 最小哈希签名：特征矩阵表示 M。随机选择 n 个排列转换用于矩阵 M 的行处理。其中 n 一般为一百或几百。对于集合 S 对应的列，分别调用这些排列转换所决定的最小哈希函数 h1，h2，h3，.......，hn，则可以构建 S 的最小哈希签名向量
-5. 最小哈希签名的计算 （重点内容）：通过一个随机哈希函数来模拟随机排列转化的效果，该函数将行号映射到与行数目大致相等的数量的桶中；
+- Shingle 集合非常大。一个 4 shingle 集合也是原始文档的 4 倍。如果有数百万文档，很可能不能将这些文档的 shingle 集合都放入内存中。
+- 目标：“**签名**”( signature) 可以看成一种特征，需要保持变换后的相似度接近于原始的 Jaccard 相似度。
+- 结果：基于最终签名集合得到的原始文档 Jaccard 相似度的估计值与真实值的差异也就在几个百分点之内。
+
+#### 3.3.1 集合的矩阵表示
+
+**特征矩阵**并非数据真正的存储方式，但是作为数据可视化的一种方式则是非常有用的。大部分是 0，只需存储 1 所在的位置。
+
+#### 3.3.2 最小哈希
+
+- 可以看成是一个特征提取的过程。
+- 集合的签名由大量计算(比如数百次)的结果组成，而每次计算是特征矩阵的最小哈希(minhashing)过程
+- 选择行的一个排列转换。任意一列的最小哈希值是在排列转换后的行排列次序下第一个列值为 1 的行的行号。
+- 每个排列转换定义了一个最小哈希函数 h。
+
+任意一列的最小哈希值是在排列转换后的行排列次序下第一个列值为 1 的行的行号。
+
+#### 3.3.3 最小哈希及 Jaccard 相似度
+
+最小哈希及 Jaccard 相似度：两个集合经随机排列**转换之后**得到的两个最小哈希值相等的概率**等于**这两个集合的 Jaccard 相似度。
+
+多计算几次最小哈希
+
+#### 最小哈希签名
+
+特征矩阵表示 M。随机选择 n 个排列转换用于矩阵 M 的行处理。其中 n 一般为一百或几百。对于集合 S 对应的列，分别调用这些排列转换所决定的最小哈希函数 h1，h2，h3，.......，hn，则可以构建 S 的最小哈希签名向量。
+
+#### 最小哈希签名的计算 （重点内容）
+
+通过一个随机哈希函数来模拟随机排列转化的效果，该函数将行号映射到与行数目大致相等的数量的桶中；
 
 全集{a, b, c, d, e}，
 S1={a, d}, s2={c}, s3={b, d, e}, s4={a, c, d}
 
-![](../../pics/集合的矩阵表示.png)
+![](./pics/集合的矩阵表示.png)
 
-![](../../pics/最小哈希签名矩阵计算.png)
+![](./pics/最小哈希签名矩阵计算.png)
 
 签名矩阵中 S1 和 S4 对应的列向量完全相同，因此我们可以猜测 SIM (S1, S4)=1.0。如果回到图 3-4，我们会发现 S1 和 S4 的真实 Jaccard 相似度为 2/3。
 因为本例规模太小，所以并不足以说明在大规模数据情况下估计值和真实值相近的规律
 
-### 3.4 文档的局部敏感哈希算法
+### 3.4 文档的局部敏感哈希算法 LSH
 
 最小哈希将大文档压缩成小的签名并同时保持任意对文档之间的预期相似度，但是高效寻找具有最大相似度的文档对仍然是不可能的。主要原因在于，即使文档本身的数目并不很大，但需要比较的文档对的数目可能太大。
 
 解决办法：**局部敏感哈希**(Locality-Sensitive Hashing, LSH)或**近邻搜索**(near-neighbor search)的一般性理论。
 
-**基本思想**：对目标项进行多次哈希处理，使得相似项会比不相似项更可能哈希到同一个桶中。
+**基本思想**：对目标项进行多次哈希处理，**使得相似项会比不相似项更可能哈希到同一个桶中。**
 将至少有一次哈希到同一桶中的文档对看作是候选对，只去检查这些候选对之间的相似度。
 我们希望大部分不相似的文档对不会哈希到相同的桶中，这样就永远不需要检查它们的相似度。
 
@@ -255,47 +323,65 @@ X 和 y 的最长公共子序列（LCS）：通过在 x 和 y 的某些位置进
 
 ### 流数据的概念
 
+流数据处理的是**部分数据**而不是全部数据。传感器，图像，互联网
+
 - Hadoop 擅长批处理，不适合流计算。
 - **流计算**：实时获取来自不同数据源的海量数据，经过实时分析处理，获得有价值的信息
 - 流计算秉承一个基本理念，即**数据的价值随着时间的流逝而降低**
 
+流数据的特点：无穷无尽、非平稳
+
+流查询：
+
+- 固定查询：从不停止
+- Ad-hoc 查询：存储数据流的合适部分，为查询作准备；根据存储的内容应答，只执行一次
+
 流数据处理的限制
 
-- 流元素的分发速度通常很快。所以，必须要对元素进行实时处理，否则就会永远失去处理它们的机会，除非访问归档存储器。
-- 流处理算法通常在内存中执行，一般不会或者极少访问二级存储器，这一点相当重要。
+- 流元素的**分发速度**通常很快。所以，必须要对元素进行实时处理，否则就会永远失去处理它们的机会，除非访问归档存储器。
+- 流处理算法通常在**内存**中执行，一般不会或者极少访问二级存储器，这一点相当重要。
 - 即使当数据流很慢(参考 4.1.2 节的传感器数据的例子)时，也可能存在多个这样的数据流。即使每个流本身能够基于很小的内存就能处理，但所有数据流的内存需求加在一起可能就很容易超过内存的可用容量。
+
+流数据处理策略，两个一般化的结论：
+
+- 通常情况下，获得问题的近似解比精确解要高效得多。
+- 一系列与哈希相关的技术被证明十分有用。
 
 ### 4.2 流当中的数据抽样
 
-**简单随机抽样**：从总体 N 个单位中随机地抽取 n 个单位作为样本，使得每一个样本都有相同的概率被抽中。通常只是在总体单位之间差异程度较小和数目较少时，才采用这种方法。
+<!-- **简单随机抽样**：从总体 N 个单位中随机地抽取 n 个单位作为样本，使得每一个样本都有相同的概率被抽中。通常只是在总体单位之间差异程度较小和数目较少时，才采用这种方法。
 
 **系统抽样**：将总体中的所有单位按一定顺序排列，在规定的范围内随机地抽取一个单位作为初始单位，然后按事先规定好的规则确定其他样本单位。先从数字 1 到 k 之间随机抽取一个数字 r 作为初始单位，以后依次取 r+k、r+2k……等单位。
 
 **分层抽样**：将抽样单位按某种特征或某种规则划分为不同的层，然后从不同的层中独立、随机地抽取样本，保证样本的结构与总体的结构比较相近，从而提高估计的精度。
 
-**整群抽样**：将总体中若干个单位合并为组，抽样时直接抽取群，然后对中选群中的所有单位全部实施调查。抽样时只需群的抽样框，可简化工作量，缺点是估计的精度较差。
+**整群抽样**：将总体中若干个单位合并为组，抽样时直接抽取群，然后对中选群中的所有单位全部实施调查。抽样时只需群的抽样框，可简化工作量，缺点是估计的精度较差。 -->
 
 #### 4.2.2 代表性样本的获取
 
 不能从每个用户的搜索查询的抽样样本中得到正确答案。
-必须要挑出 1/10 的用户并将他们的所有搜索查询放入样本中，而不考虑其他用户的搜索查询。
+必须要挑出 1/10 的**用户**并将他们的所有搜索查询放入样本中，而不考虑其他用户的搜索查询。
 
 ### 4.3 流过滤
 
 #### 4.3.2 布隆过滤器
 
 布隆过滤器（Bloom Filter）是一种概率空间高效的数据结构。用于检索一个元素是否在一个集合中。
-存在“在集合内（可能错误）”和“不在集合内（绝对不在集合内）”两种情况。
+存在“在集合内（可能错误）”和“不在集合内（绝对不在集合内）”两种情况。**应用**：垃圾邮件、判断犯罪嫌疑人，拼写检查
 
 **核心思想**就是利用多个不同的 Hash 函数来解决“冲突”。
 
 集合 S 有 m 个元素，位数组容量为 n，而哈希函数有 k 个
 即 靶位的数目 x=n， 飞镖的数目为 y=km
-让所有的 k 个布隆过滤器都为 1 的概率是(1−e^−km/n)^k
+让所有的 k 个布隆过滤器都为 1 的概率是
+
+$$
+(1−e^{−\frac{k m}{n})^k
+$$
 
 ### 4.4 流中独立元素的数目统计
 
-问题描述：假定流元素选自某个全集。我们想知道流当中从头或某个已知的过去时刻开始所出现的不同的元素数目。
+问题描述：假定流元素选自某个全集。我们想知道流当中从头或某个已知的过去时刻开始所出现的**不同的元素数目**。
 S={x1，x2，x3,……,xN}, 找出 N
 
 目标：在合理的内存空间下，得到我们想要的近似结果。
@@ -304,13 +390,21 @@ S={x1，x2，x3,……,xN}, 找出 N
 
 基本思想：如果流中看到的不同元素越多，那么我们看到的不同哈希值也会越多。在看到的不同哈希值越多的同时，也越可能看到其中有一个值变得“异常”。
 
+假定哈希函数 H(e)能够把元素 e 映射到[0, 2m-1]区间上；再假定函数 TailZero(x)能够计算正整数 x 的二进制表示中末尾连续的 0 的个数，
+
 我们对每个元素 e 计算 TailZero(H(e))，并求出最大的 TailZero(H(e))记为 Max，那么对于独立元素数目的估计为$2^{Max}$。
+
+m 的估计值 2R 不可能过高或过低。
 
 #### 4.4.3 组合估计
 
 我们可以将两种策略组合起来：
 首先将哈希函数分成小组，每个组内取平均值(单独使用的缺点：容易过高)。
 然后在所有平均值中取中位数(单独使用的缺点：永远都是 2 的幂，无法得到精确估计值)。
+
+#### 4.4.4 空间需求
+
+唯一需要在内存保存的是每个哈希函数所对应的一个整数。
 
 ### 4.5 矩估计
 
@@ -488,16 +582,16 @@ Web 广告的主要场景：
 
 ### 推荐系统和搜索引擎的异同点
 
-相同点：
-都是一种帮助用户快速发现有用信息的工具
-不同点：
-搜索引擎需要用户主动提供准确的关键词来寻找信息
-推荐系统不需要用户提供明确的需求，而是通过分析用户的历史行为给用户的兴趣建模
+- 相同点：都是一种帮助用户快速**发现有用信息**的工具
+- 不同点：
+  - 搜索引擎需要用户主动提供准确的关键词来寻找信息
+  - 推荐系统不需要用户提供明确的需求，而是通过分析用户的历史行为给用户的兴趣建模
+
 从某种意义上说，推荐系统和搜索引擎对于用户来说是两个互补的工具
 搜索引擎满足了用户有明确目的时的主动查找需求
 推荐系统能够在用户没有明确目的的时候帮助他们发现感兴趣的新内容
 
 ### 推荐系统可以分成两大类
 
-基于内容的系统(Content-based System)：这类系统主要考察的是推荐项的性质。项之间的相似度通过计算它们的属性之间的相似度来确定。例如，如果一个 Netflix 的用户观看了多部西部牛仔片，那么系统就会将数据库中属于“西部牛仔”类的电影推荐给该用户。
-协同过滤系统(Collaborative Filtering System)：这类系统通过计算用户或/和项之间的相似度来推荐项。与某用户相似的用户所喜欢的项会推荐给该用户。
+基于**内容**的系统(Content-based System)：这类系统主要考察的是推荐项的性质。项之间的相似度通过计算它们的属性之间的相似度来确定。例如，如果一个 Netflix 的用户观看了多部西部牛仔片，那么系统就会将数据库中属于“西部牛仔”类的电影推荐给该用户。
+**协同过滤**系统(Collaborative Filtering System)：这类系统通过计算用户或/和项之间的相似度来推荐项。与某用户相似的用户所喜欢的项会推荐给该用户。
