--- a/大四上/web数据挖掘/练习.md
+++ b/大四上/web数据挖掘/练习.md
@@ -1,6 +1,6 @@
 # 练习
 
-## 第三章 MapReduce
+## 第二章 MapReduce
 
 ppt chap 2 page 104-105
 
@@ -20,6 +20,16 @@ ppt chap 2 page 104-105
 
 计算一个社交网站每个用户的朋友数，需要的关系运算为： C
 A. 并 B. 选择 C. 分组和聚合 D. 自然连接
+
+### 第三章 相似项发现
+
+计算三个集合 A={1,2,3,4}, B={2,3,5,7}和 C={2,4,6}两两之间的 Jaccard 相似度。
+
+SIM(A,B)=2/6 SIM(A,C)=2/5 SIM(B,C)=1/6
+
+计算三个包 A={1,1,1,2}, B={1,1,2,2,3}和 C={1,2,3,4}两两之间的 Jaccard 相似度。
+
+SIM(A,B)=3/9 SIM(A,C)=2/8 SIM(B,C)=3/9
 
 ## 第五章 链接分析
 
